Continuação da página inicial.

--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@fontsource/lexend": "^4.5.13",
     "@unocss/preset-icons": "^0.45.29",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "typeit-react": "^2.6.0"
   },
   "devDependencies": {
     "@fontsource/inter": "^4.5.13",
     "@fontsource/montserrat": "^4.5.13",
     "@iconify-json/fa6-brands": "^1.1.6",
     "@iconify-json/fa6-solid": "^1.1.7",
+    "@types/node": "^18.8.4",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
