--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "pnpm run build && type nul > build/.nojekyll && gh-pages -t -d build"
+
   },
   "dependencies": {
     "@fontsource/lexend": "^4.5.13",
@@ -24,6 +26,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
+    "gh-pages": "^4.0.0",
     "typescript": "^4.6.4",
     "unocss": "^0.45.29",
     "vite": "^3.1.0"
